--- a/src/components/Home/Features.css
+++ b/src/components/Home/Features.css
@@ -12,13 +12,10 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.swiper-button-prev {
-  left: 0px;
+.swiper-button-next, .swiper-button-prev {
+  display: none;
 }
 
-.swiper-button-next {
-  right: 0px;
-}
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
